과목별 점수 평균 기준 정렬 기능 구현